--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,44 +1,6 @@
-@font-face {
-  font-family: 'Roboto';
-  src:
-    local('Roboto-Thin'),
-    url('../assets/fonts/Roboto-Thin.woff2') format('woff2'),
-    url('../assets/fonts/Roboto-Thin.woff') format('woff');
-  font-weight: 300;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src:
-    local('Roboto-Regular'),
-    url('../assets/fonts/Roboto-Regular.woff2') format('woff2'),
-    url('../assets/fonts/Roboto-Regular.woff') format('woff');
-  font-weight: 400;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src:
-    local('Roboto-Medium'),
-    url('../assets/fonts/Roboto-Medium.woff2') format('woff2'),
-    url('../assets/fonts/Roboto-Medium.woff') format('woff');
-  font-weight: 600;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src:
-    local('Roboto-Bold'),
-    url('../assets/fonts/Roboto-Bold.woff2') format('woff2'),
-    url('../assets/fonts/Roboto-Bold.woff') format('woff');
-  font-weight: 900;
-  font-display: swap;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
 * {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Inter', 'system-ui', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', sans-serif;
   font-weight: 400;
 }
